--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -4147,14 +4147,18 @@ body.ZoomerActive {
             }
 
 .progressBarStep {
-    display: inline-block;
-    margin-bottom: 40px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
     width: 100%;
-    padding-bottom: 25px;
+    padding-bottom: 100px;
+    padding-top: 45px;
 }
 
     .progressBarStep ul#progressList {
-        width: 100%;
+        width: 70%;
         height: 5px;
         background-color: #ddd;
         border-radius: 3px;
@@ -4179,7 +4183,7 @@ body.ZoomerActive {
                 width: 100%;
                 text-align: center;
                 left: 50%;
-                top: 28px;
+                top: 60px;
                 transform: translateX(-50%);
                 font-family: "primaryfont_Normal";
                 font-size: 16px;
@@ -4193,28 +4197,55 @@ body.ZoomerActive {
                 transform: translate(-50%, -50%);
                 color: #000;
                 font-family: "primaryfont_Bold";
+                z-index: 10;
             }
+
+                .progressBarStep ul#progressList li span.count i {
+                    font-size: 25px;
+                }
 
             .progressBarStep ul#progressList li:after {
                 content: "";
-                width: 35px;
-                height: 35px;
+                width: 80px;
+                height: 80px;
                 background-color: #ddd;
                 border-radius: 50%;
                 position: absolute;
                 left: 50%;
                 top: 50%;
                 transform: translate(-50%, -50%);
+                z-index: 5;
+                border: solid 4px #fff;
+            }
+
+            .progressBarStep ul#progressList li .HalfCircle {
+                position: absolute;
+                z-index: 5;
+                width: 88px;
+                height: 44px;
+                border-top-left-radius: 100px;
+                border-top-right-radius: 100px;
+                border: 4px solid #ddd;
+                border-bottom: 0;
+                left: 50%;
+                top: -42px;
+                transform: translateX(-50%);
+                -webkit-box-sizing: border-box;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
             }
 
             .progressBarStep ul#progressList li.active {
-                background-color: #4cb71a;
+                background-color: #f33655;
             }
 
+                .progressBarStep ul#progressList li.active .HalfCircle {
+                    border: 4px solid #f33655;
+                }
+
                 .progressBarStep ul#progressList li.active:after {
-                    background-color: #4cb71a;
-                    border: solid 2px #fff;
-                    box-shadow: 0px 0px 0px 2px #4cb71a;
+                    background-color: #f33655 !important;
+                    border: solid 2px #fff !important;
                 }
 
                 .progressBarStep ul#progressList li.active span.count {
@@ -4224,6 +4255,14 @@ body.ZoomerActive {
                 .progressBarStep ul#progressList li.active span.txt {
                     font-family: "primaryfont_Bold";
                 }
+
+            .progressBarStep ul#progressList li:nth-child(even) .HalfCircle {
+                transform: translate(-50%, 100%) rotate(180deg);
+            }
+
+            .progressBarStep ul#progressList li:nth-child(even):after {
+                border: solid 4px #fff;
+            }
 
 .progressNavBar {
     width: 100%;
@@ -4248,6 +4287,12 @@ body.ZoomerActive {
         border: none;
         margin: 0px 10px;
     }
+
+
+
+
+
+
 
 .myAccLeftNavsec .leftsideNavWrap {
     width: 100%;
