few css updataes Imported from Changeset 2633

--- a/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
@@ -243,7 +243,14 @@
     </div>
 </section>
 
-@*<div class="about bg-white get-address-page uni-get-address-page">
+
+
+
+
+
+
+
+<div class="about bg-white get-address-page uni-get-address-page">
     <div class="container-fluid custom-max-width">
         <div class="row checkout-side-menu">
             <div class="col-md-3 col-sm-12">
@@ -450,4 +457,4 @@
             </div>
         </div>
     </div>
-</div>*@
+</div>
