--- a/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
@@ -58,9 +58,9 @@
             <div class="checkoutInnersec billandshipsec">
                 <h4 class="ordConfirmHead">Billing & Shipping</h4>
 
-                @*================ Shipping Address- start =================*@
+                @*================ Billing Address- start =================*@
                 <div class="billigAddrWrap">
-                    <h5 class="subheadCmn">Shipping Address</h5>
+                    <h5 class="subheadCmn">Billing Address</h5>
                     <p class="address">
                         Mr. John Doe<br />
                         London EC1V, 9JH, United Kingdom<br />
@@ -73,7 +73,7 @@
                         <button class="btmBtn">Remove Address</button>
                     </div>
                 </div>
-                @*================ Shippind Address- end =================*@
+                @*================ Billing Address- end =================*@
 
                 @*================ Add New Address- start =================*@
                 <div class="addNewAddrWrap">
@@ -135,15 +135,15 @@
                     </div>
                 </div>
                 <div class="shippingAddrWrap">
-                    <h5 class="subheadCmn">Billing Address</h5>
+                    <h5 class="subheadCmn">Shipping Address</h5>
                     <div class="checkboxwrap">
                         <input class="styled-checkbox"
-                               id="billing_address_checkbox"
+                               id="shipping_address_checkbox"
                                type="checkbox"
                                value="" />
-                        <label for="billing_address_checkbox">Same as Shipping Address</label>
+                        <label for="shipping_address_checkbox">Same as Billing Address</label>
                     </div>
-                    <button class="addnwShopAdrrbtn">ADD NEW BILLING ADDRESS</button>
+                    <button class="addnwShopAdrrbtn">ADD NEW SHIPPING ADDRESS</button>
                 </div>
                 <div class="saveAddrWrap">
                     <button class="saveAddrBtn">Save Address</button>
@@ -168,7 +168,7 @@
                                value="" />
                         <label for="courier_checkbox">Delivery to Address (Courier) </label>
                     </div>
-                        <button class="addnwShopAdrrbtn">SELECT DELIVERY METHOD</button>
+                    <button class="addnwShopAdrrbtn">SELECT DELIVERY METHOD</button>
                 </div>
                 @*================ Select Delivery Method- end =================*@
 
@@ -194,48 +194,48 @@
                 @*================ Select Shipment Type- end =================*@
 
                 @*================ Select Collection Point- start =================*@
-            <div class="shippingAddrWrap">
-                <div class="addNewAddrWrap">
-                    <h5 class="subheadCmn">Select Collection Point</h5>
-                    <div class="addNwAdrrFormWrap">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <div class="findAddrWrap">
-                                        <input type="text" class="findAddrInput" placeholder="Enter Postcode" />
-                                        <button class="fadBtn">Search</button>
+                <div class="shippingAddrWrap">
+                    <div class="addNewAddrWrap">
+                        <h5 class="subheadCmn">Select Collection Point</h5>
+                        <div class="addNwAdrrFormWrap">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <div class="findAddrWrap">
+                                            <input type="text" class="findAddrInput" placeholder="Enter Postcode" />
+                                            <button class="fadBtn">Search</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mt-3">
+                                <div class="col-lg-6">
+                                    <div class="billigAddrWrap collection-address-div">
+                                        <p class="address">
+                                            BD7 1PX<br />
+                                            4 Summerville Road<br />
+                                            Bradford <br />
+                                            United Kingdom
+                                        </p>
+                                        <p class="miles">213 mi</p>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="billigAddrWrap collection-address-div">
+                                        <p class="address">
+                                            BD7 1PX<br />
+                                            4 Summerville Road<br />
+                                            Bradford <br />
+                                            United Kingdom
+                                        </p>
+                                        <p class="miles">213 mi</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row mt-3">
-                            <div class="col-lg-6">
-                                <div class="billigAddrWrap collection-address-div">
-                                    <p class="address">
-                                        BD7 1PX<br />
-                                        4 Summerville Road<br />
-                                        Bradford <br />
-                                        United Kingdom
-                                    </p>
-                                    <p class="miles">213 mi</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="billigAddrWrap collection-address-div">
-                                    <p class="address">
-                                        BD7 1PX<br />
-                                        4 Summerville Road<br />
-                                        Bradford <br />
-                                        United Kingdom
-                                    </p>
-                                    <p class="miles">213 mi</p>
-                                </div>
-                            </div>
-                        </div>
+                        <button class="addnwShopAdrrbtn">Select Collection Point</button>
                     </div>
-                    <button class="addnwShopAdrrbtn">Select Collection Point</button>
                 </div>
-            </div>
                 @*================ Select Collection Point- end =================*@
 
             </div>
