add payment method UI in getAdddress page Imported from Changeset 2635

--- a/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
@@ -238,6 +238,34 @@
                 </div>
                 @*================ Select Collection Point- end =================*@
 
+                @*================ Select Payment Method- start =================*@
+            <div class="shippingAddrWrap">
+                <h5 class="subheadCmn">Select Payment Method</h5>
+                <div class="checkboxwrap">
+                    <input class="styled-checkbox"
+                           id="cash_checkbox"
+                           type="checkbox"
+                           value="" />
+                    <label for="cash_checkbox">Cash</label>
+                </div>
+                <div class="checkboxwrap">
+                    <input class="styled-checkbox"
+                           id="paypal_checkbox"
+                           type="checkbox"
+                           value="" />
+                    <label for="paypal_checkbox">Paypal</label>
+                </div>
+                <div class="checkboxwrap">
+                    <input class="styled-checkbox"
+                           id="sage_pay_checkbox"
+                           type="checkbox"
+                           value="" />
+                    <label for="sage_pay_checkbox">Sage Pay</label>
+                </div>
+                <button class="addnwShopAdrrbtn">SELECT PAYMENT METHOD</button>
+            </div>
+                @*================ Select Payment Method- end =================*@
+
             </div>
         </div>
     </div>
