--- a/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/ConfirmOrder.cshtml
@@ -9,6 +9,127 @@
 
 }
 
+
+
+
+<section class="nb_sec nb_prdlisting_pgsec">
+    <div class="container">
+        <div class="breadCrumbtopsec">
+            <div class="nb_bread_crumbwrap">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="#">Home</a></li>
+                        <li>></li>
+                        <li class="breadcrumb-item">
+                            <a href="#">Checkout Confirmation</a>
+                        </li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+        <div class="nb_sec checkconfirmSec">
+            <div class="progressBarStep ordConfirmationPgStepsec">
+                <ul id="progressList">
+                    <li class="active">
+                        <div class="HalfCircle"></div>
+                        <span class="txt">Product</span><span class="count"><i class="icon-product"></i></span>
+                    </li>
+                    <li class="active">
+                        <div class="HalfCircle"></div>
+
+                        <span class="txt">Basket</span><span class="count"><i class="icon-basket-cart"></i></span>
+                    </li>
+                    <li>
+                        <div class="HalfCircle"></div>
+                        <span class="txt">Review Items</span><span class="count"><i class="icon-review-items"></i></span>
+                    </li>
+                    <li>
+                        <div class="HalfCircle"></div>
+                        <span class="txt">Billing & Shipping</span><span class="count">
+                            <i class="icon-billing-shipping"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <div class="HalfCircle"></div>
+                        <span class="txt">Payment</span><span class="count"><i class="icon-credit-card"></i></span>
+                    </li>
+                    <li>
+                        <div class="HalfCircle"></div>
+                        <span class="txt">Order Confirmation</span><span class="count"><i class="icon-tick1"></i></span>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="orderConfirmationSection">
+                <h4 class="ordConfirmHead">Order Confirmation</h4>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <h4 class="subHead">
+                            Billing Address
+                        </h4>
+                        <p class="content">
+                            Delivery to : Mr. John Doe, Flat 7,Wenlake house, Old Street,
+                            London EC1V, 9JH, United Kingdom, Mob: 0761654184
+                        </p>
+                        <h4 class="subHead">
+                            Shipment Address
+                        </h4>
+                        <p class="content">
+                            Delivery to : Mr. John Doe, Flat 7,Wenlake house, Old Street,
+                            London EC1V, 9JH, United Kingdom, Mob: 0761654184
+                        </p>
+                        <h4 class="subHead">
+                            Delivery Method
+                        </h4>
+                        <p class="content">
+                            Pick up (from collection point) - Free
+                        </p>
+                        <h4 class="subHead">
+                            Payment Method
+                        </h4>
+                        <p class="content">
+                            Sage Pay
+                        </p>
+                    </div>
+                    <div class="offset-lg-1 col-lg-3">
+                        <h4 class="subHead">
+                            Item Details
+                        </h4>
+                        <ul class="itemList">
+                            <li>
+                                Unisex Zipped Hoodie - Grey<br />
+                                £34.99, Qty: 1
+                            </li>
+                            <li>
+                                Knitted Scarf <br />
+                                £17.99, Qty: 1
+                            </li>
+                            <li>
+                                Unisex Zipped Hoodie - Grey<br />
+                                £34.99, Qty: 1
+                            </li>
+                            <li>
+                                Knitted Scarf <br />
+                                £17.99, Qty: 1
+                            </li>
+                        </ul>
+                        <h4 class="subHead">Total Amount</h4>
+                        <h4 class="subHead">£52.98</h4>
+
+                    </div>
+                    <div class="saveAddrWrap mt-5 mb-5 ml-3 mr-3"">
+                        <button class="saveAddrBtn">Proceed to Payment</button>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 <div class="about bg-white confirm-order-page">
     <div class="container custom-max-width ">
         <div class="row">
